Adjusted header text and spacing. Fixed mobile animation

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -28,6 +28,7 @@ body {
     width: 100vw;
     height: 95vh;
     animation: scrollBackground 40s linear infinite;
+    border-bottom: 5px solid #5A9900;
 }
 @keyframes scrollBackground {
     0% {
@@ -49,14 +50,14 @@ header {
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
-    border-bottom: 5px solid #5A9900;
+    
     font-family: 'Press Start 2P', system-ui;
     line-height: 1.4;
 
-
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top: 18vh;
 }
 
 .title {
@@ -65,6 +66,12 @@ header {
     text-shadow: 3px 3px 0 #2d2828;
     margin-bottom: 10px;
     letter-spacing: 2px;
+    padding-bottom: 1vh;
+}
+
+.subtitle {
+    font-size: 15px;
+    color: white; 
 }
         
 /* Navigation Buttons */
@@ -73,6 +80,7 @@ header {
     justify-content: center;
     gap: 20px;
     margin: 20px 0;
+    padding-top: 2vh;
 }
 
 .nav-button {
@@ -168,12 +176,21 @@ footer {
 /* Responsive Design */
 @media (max-width: 600px) { /* Flappy Bird mobile */
     .title {
-        font-size: 28px;
+        font-size: 24px;
+        letter-spacing: 0.8px;
+        margin-left: 1vh;
+        margin-right: 1vh;
+    }
+
+    .subtitle {
+        font-size: 12px;
     }
     
     .nav-button {
         padding: 10px 15px;
         font-size: 16px;
+        letter-spacing: 0.8px;
+        line-height: 1.3;
     }
 
     .nav-buttons {
@@ -191,7 +208,7 @@ footer {
 
     .header-background {
         background-size: cover;
-        animation: scrollBackground 40s linear infinite;
+        animation: scrollBackground 10s linear infinite;
         position: absolute;
     }
 }
